Fixed text overflow in calculator

--- a/styles.css
+++ b/styles.css
@@ -25,18 +25,24 @@ body {
     0em 0.4em 0.6em rgb(63, 63, 62);
   border: 2px rgb(207, 160, 168) solid;
 }
+
 .display {
   display: flex;
   flex-direction: column;
   align-items: end;
   justify-content: flex-end;
   height: 20%;
+  max-width: 286px;
+  box-sizing: border-box;
   padding: 16px;
   border-radius: 24px;
   background-color: white;
   box-shadow: inset 0px 3px 5px rgba(0, 0, 0, 0.5);
   font-size: 26px;
   border: 1.5px rgb(207, 160, 168) solid;
+
+  text-wrap: nowrap;
+  overflow: hidden;
 }
 .button {
   display: flex;
